# -interpolation

./: .gitignore  CMakeLists.txt  Common.c  Common.h  CubicSpline.c  CubicSpline.h  HermitInterpolation.c  HermitInterpolation.h  Makefile  TestFunctions.c  TestFunctions.h  interpolation.c  interpolation.h  main.c  test.c
